# Duality

./: .gitignore  QUICKSTART.md  README.md  augmentations.py  config.py  dataset.py  main.py  model.py  pyproject.toml  requirements.txt  test_segmentation.py  train_segmentation.py  utils.py  visualize.py
docs/: duality_hackathon_prd.md
